--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <section class="hero-section">
         <!-- Background Video -->
         <div class="video-container">
-            <video autoplay loop muted playsinline class="video-bg">
-                <source src="https://d8j0ntlcm91z4.cloudfront.net/user_38xzZboKViGWJOttwIXH07lWA1P/hf_20260217_030345_246c0224-10a4-422c-b324-070b7c0eceda.mp4" type="video/mp4">
+            <video autoplay loop muted playsinline class="video-bg" id="bg-video">
                 Your browser does not support the video tag.
             </video>
             <div class="overlay"></div>
         </div>
 
         <!-- Navbar -->
-        <nav class="navbar">
+        <nav class="navbar reveal">
             <div class="nav-left">
                 <div class="logo">VOID</div>
                 <div class="nav-links">
@@ -61,13 +60,7 @@
 
         <!-- Hero Content -->
         <div class="hero-content">
-            <!-- Badge -->
-            <div class="badge reveal">
-                <div class="badge-dot"></div>
-                <span class="badge-text-faded">Now accepting select clients for</span>
-                <span class="badge-text-solid">Q3 2026</span>
-            </div>
-
+         
             <!-- Heading -->
             <h1 class="hero-heading reveal">Beyond the Speed of Experience.</h1>
 
